--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -46,6 +46,7 @@
 
   &.response {
     display: flex;
+    min-height: 0;
     justify-content: flex-start;
     padding-left: 20px;
     animation: scale-up-bl 0.5s ease;
@@ -137,6 +138,10 @@
 
 .chat-message-rt-container {
   padding: 0 20px;
+  animation: scale-up-bl 0.5s ease;
+  .react-autoql-reverse-translation {
+    padding-top: 0;
+  }
 }
 
 /* animations */
