--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -121,12 +121,15 @@
         margin-right: -5px;
       }
     }
-
-    .react-autoql-toolbar:not(.active) {
-      pointer-events: none;
-      visibility: hidden;
-      opacity: 0;
+    .react-autoql-toolbar {
+      white-space: nowrap;
+      &:not(.active) {
+        pointer-events: none;
+        visibility: hidden;
+        opacity: 0;
+      }
     }
+
     &:hover .react-autoql-toolbar,
     .react-autoql-toolbar.active {
       pointer-events: auto;
@@ -137,7 +140,7 @@
 }
 
 .chat-message-rt-container {
-  padding: 0 20px;
+  padding: 0 20px 15px 20px;
   animation: scale-up-bl 0.5s ease;
   .react-autoql-reverse-translation {
     padding-top: 0;
