fix: data explorer card collapse styles

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -33,6 +33,8 @@
 
   &.collapsed {
     .react-autoql-card-content {
+      visibility: hidden;
+      position: absolute;
       pointer-events: none;
       opacity: 0;
     }
