--- a/src/components/OptionsToolbar/OptionsToolbar.scss
+++ b/src/components/OptionsToolbar/OptionsToolbar.scss
@@ -27,12 +27,30 @@
   }
 }
 
-.report-problem-text-area {
-  border-radius: 4px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  margin-top: 10px;
-  padding: 5px 10px;
-  outline: none !important;
+.report-problem-modal-body {
+  h3 {
+    margin-top: 0;
+    margin-bottom: 5px;
+  }
+
+  .report-problem-radio-group {
+    display: block;
+    margin-bottom: 30px;
+  }
+
+  .report-problem-text-area {
+    width: 100%;
+    min-height: 80px;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    margin-top: 15px;
+    padding: 5px 10px;
+    outline: none !important;
+    &:focus,
+    &:hover {
+      border-color: var(--react-autoql-accent-color);
+    }
+  }
 }
 
 .copy-sql-modal-content {
