--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -85,6 +85,7 @@
       display: flex;
       flex-direction: column;
       flex-wrap: nowrap;
+      flex: 0 1 100vh;
       height: 100%;
       padding-left: 8px;
     }
