--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -236,7 +236,8 @@
   transition: all 0.2s ease !important;
   text-align: left !important;
   opacity: 1 !important;
-  z-index: 99999 !important; /* necessary to show up on top of rc drawer */
+  z-index: 999999 !important; /* necessary to show up on top of rc drawer */
+  max-width: 300px;
 }
 
 .single-value-response-container {
