WIP: second y axis working with margins, no labels yet

--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -1,6 +1,6 @@
 g.legendOrdinal,
 g.legendOrdinal tspan {
-  stroke-width: 10px;
+  // stroke-width: 10px;
   stroke: transparent;
   letter-spacing: 0; // not clickable if larger than 0
   cursor: pointer;
