--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -308,7 +308,7 @@
   border: 1px solid #ababab52;
   border-radius: 4px;
   box-shadow: 0px 0 8px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
-  transition: opacity 0.2s ease 0s !important;
+  // transition: opacity 0.2s ease 0s !important;
   opacity: 1 !important;
   overflow: hidden !important;
   background-color: var(--react-autoql-background-color-secondary);
