--- a/src/components/SelectableList/SelectableList.scss
+++ b/src/components/SelectableList/SelectableList.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   line-height: 36px;
   user-select: none;
+  cursor: default;
 
   &:hover {
     background: var(--react-autoql-hover-color);
@@ -14,7 +15,7 @@
   }
 
   &.disabled {
-    opacity: 0.5;
+    opacity: 0.4;
     pointer-events: none;
   }
 }
