WIP: axis titles and labels working with correct units

--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -51,6 +51,10 @@ g.legendOrdinal tspan {
       margin-bottom: 15px;
     }
 
+    .number-selector-list-checkbox {
+      margin-left: 10px;
+    }
+
     .number-selector-field-group-container {
       white-space: nowrap;
 
