fix: axis showing dropdown border when it shouldnt
clean up unused props

--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -107,10 +107,10 @@
     stroke-linecap: round;
     stroke-linejoin: round;
 
-    .line-dot-inner-circle,
-    .line-dot-outer-circle {
-      paint-order: stroke;
-    }
+    // .line-dot-inner-circle,
+    // .line-dot-outer-circle {
+    //   paint-order: stroke;
+    // }
 
     &.hidden-dot {
       .line-dot-inner-circle {
